<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.DataDokterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/margin20"
        android:paddingRight="@dimen/margin20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/width"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isi_dokter"
                android:textColor="@color/hitam"
                android:textSize="@dimen/ukuranText"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/width">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/data_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/nama"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/data_alamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alamat"/>
                    <Button
                        android:id="@+id/btn_alamat"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/alamat"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/data_usia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/umur"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/data_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/tlpn"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/data_berat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/berat"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/data_tinggi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/tinggi"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/data_keluhan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/keluhan"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/width">

                <TextView
                    android:id="@+id/data_biaya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/hitam"
                    android:text="@string/biaya"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20">

            <Button
                android:id="@+id/lanjutkan_dokter"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/radius"
                android:text="@string/lanjut" />

            <TextView
                android:id="@+id/nama_dokter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hitam"
                android:text="@string/pilih"/>
            <TextView
                android:id="@+id/nama_dokter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/width"
                android:layout_toRightOf="@id/nama_dokter"/>

            <TextView
                android:id="@+id/nama_penyakit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama_dokter"
                android:layout_marginTop="@dimen/width"
                android:textColor="@color/hitam"
                android:text="@string/jenis"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30"
                android:paddingRight="@dimen/width"
                android:layout_toRightOf="@id/nama_penyakit"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>