<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.register.RegisterActivity">

    <LinearLayout
        android:id="@+id/linear_regis"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin20"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/logo1"/>

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dokter"
            android:textSize="@dimen/ukuranText"
            android:textColor="@color/background"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/width"
            android:gravity="center"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/linear_regis"
        android:layout_marginTop="@dimen/width">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin20"
            android:paddingLeft="@dimen/margin20">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin20"
            android:paddingLeft="@dimen/margin20">

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:paddingRight="@dimen/margin20"
            android:paddingLeft="@dimen/margin20">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:onClick="register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin20"
            android:paddingRight="@dimen/margin20"
            android:layout_marginTop="@dimen/margin20"
            android:layout_gravity="center"
            android:background="@drawable/radius"
            android:textColor="@color/putih"
            android:text="@string/register"/>

        <Button
            android:id="@+id/btn_login2"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_marginTop="@dimen/margin20"
            android:layout_height="wrap_content"
            android:textColor="@color/background"
            android:text="@string/already" />
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>