<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PengaturanActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dokter"
            android:layout_marginTop="@dimen/margin20"
            android:textSize="@dimen/ukuranText"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/margin20"
            android:paddingLeft="@dimen/margin20"
            android:padding="@dimen/width"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30"
                android:background="@drawable/radius_putih">

                <Button
                    android:id="@+id/bantuan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:background="@null"
                    android:text="@string/bantuan"
                    android:textColor="@color/hitam"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30"
                android:background="@drawable/radius_putih">

                <Button
                    android:id="@+id/masukkan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:background="@null"
                    android:text="@string/masukkan"
                    android:textColor="@color/hitam"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30"
                android:background="@drawable/radius_putih">

                <Button
                    android:id="@+id/keluar"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:background="@null"
                    android:text="@string/keluar"
                    android:textColor="@color/hitam"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>